2013-03-01  Ramon Casero  <rcasero@gmail.com>

	* Add matlab/ManifoldToolbox/scimat_closed_surf_to_bw.m: (v0.1.0)

	- SCIMAT_CLOSED_SURF_TO_BW Segment the inside of the triangulation
	of a closed surface.

2013-02-28  Ramon Casero  <rcasero@gmail.com>

	* Add matlab/ManifoldToolbox/delaunay_sphere.m: (0.1.0)

	- DELAUNAY_SPHERE Triangulation of a sphere or a surface
	topologically equivalent to a sphere so that it can be used as a
	mesh.

	* Add matlab/PointsToolbox/thickslice_collate_sax_la.m: (0.1.0)

	- THICKSLICE_COLLATE_SAX_LA Build a distance/adjacency matrix
	collating points from a Long Axis plane to a set of Short Axis
	planes.

	* matlab/PointsToolbox/surface_interpolation.m: (v0.5.1)

	- Accept a tension interpolation parameter for spherical
	splines. Tension works as a regulariser, smoothing the spline.

2013-02-27  Ramon Casero  <rcasero@gmail.com>

	* Add matlab/PointsToolbox/scimat_simlandmarks_thickslice.m: (0.1.0)

	- SCIMAT_SIMLANDMARKS_THICKSLICE Simulate a human placing
	landmarks on the boundary of a "thick slice" segmentation.

	* matlab/PointsToolbox/scinrrd_surface_interpolation.m: (0.7.0)
	* matlab/test/test_scinrrd_surface_interpolation.m: (0.1.1)

	- Change of interface to match the change of interface in
	surface_interpolation().

	* Move data files from matlab/test to matlab/test/data.

	* matlab/test/test_surface_interpolation.m: (v0.2.0)

	- Interface of surface_interpolation() has changed.

	- Add "PCA parameterisation for all interpolation methods on a
	plane".

	- Add "Isomap parameterisation for all interpolation methods on a
	plane".

	- Add "We have a scattered set of points and we want to compute an
	interpolation surface topologically equivalent to a sphere"

	* matlab/PointsToolbox/surface_interpolation.m: (0.5.0)

	- Full change to the interface. Big rewrite of the function.

	- Add parameterisation method 'sphisomap': Our extension to the
	Isomap method so that points are parameterised on a sphere rather
	than on a plane.
